--- a/_includes/themes/hooligan/post.html
+++ b/_includes/themes/hooligan/post.html
@@ -58,3 +58,8 @@
     {% endunless %}         
   </div>
 </div>
+<hr>
+<div class="copyright">
+<p><strong>本文固定链接：</strong><a href='{ {page.url}}'>http://blog.javachen.com/2013/08/31/my-jekyll-config.html</a></p>
+<p><strong>原创文章,转载请注明出处：</strong><a href='{ {page.url}}'>JavaChen Blog</a></p>
+</div>
