--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -114,7 +114,7 @@
     <footer>
       <div class="container">
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">google</a>
           and <a href="http://github.com/dhulihan/hooligan" target="_blank">The Hooligan Theme</a>
         </p>
       </div>
@@ -125,5 +125,10 @@
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
 
     {% include JB/analytics %}
+    <hr>
+<div class="copyright">
+<p><strong>本文固定链接：</strong><a href='{ {page.url}}'>http://lp380490944.github.io</a></p>
+<p><strong>原创文章,转载请注明出处：</strong><a href='{ {page.url}}'>lp380490944's Blog</a></p>
+</div>
   </body>
 </html>
