--- a/_includes/follow.html
+++ b/_includes/follow.html
@@ -5,8 +5,8 @@
                             <li><a href="https://github.com/pizn" target="_blank" class="v-github" rel="nofollow"><span>GitHub</span></a></li>
                             <li><a href="http://www.twitter.com/piznlin" target="_blank" class="v-twitter" rel="nofollow"><span>Twitter</span></a></li>
                             <li><a href="http://www.weibo.com/pizner" target="_blank" class="v-weibo" rel="nofollow"><span>Weibo</span></a></li>
-                            <li><a href="http://www.flickr.com/photos/pizner" target="_blank" class="v-flicker" rel="nofollow"><span>flicker</span></a></li>
-                            <li><a href="mailto:pizner@gmail.com" target="_blank" class="v-rss" rel="nofollow"><span>email</span></a></li>
+                            <li><a href="http://www.flickr.com/photos/lp380490944" target="_blank" class="v-flicker" rel="nofollow"><span>flicker</span></a></li>
+                            <li><a href="mailto:jp380490944@gmail.com" target="_blank" class="v-rss" rel="nofollow"><span>email</span></a></li>
                         </ul>
                     </article>
                 </div>
